--- a/principal.html
+++ b/principal.html
@@ -9,11 +9,13 @@
     <p class="frase">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis condimentum. Aliquam nonummy auctor massa. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla at risus. Quisque purus magna, auctor et, sagittis ac, posuere eu, lectus. Nam mattis, felis ut adipiscing.</p>
 
     <ul class="informacoes">
-        <li><span id="tamanho-frase">30</span> palavras</li>
+        <li>A frase possui <span id="tamanho-frase"></span> palavras</li>
         <li><span id="tempo-digitacao">3</span> segundos</li>
     </ul>
 
     <textarea class="campo-digitacao" rows="8" cols="40"></textarea>
+
+    <button id="botao-reiniciar">Reiniciar Jogo</button>
 
     <ul>
         <li><span id="contador-caracteres">0</span> caracteres</li>
