Funções que auxiliam os estilos

--- a/principal.html
+++ b/principal.html
@@ -1,29 +1,50 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <title>Alura Typer</title>
+    <link rel="stylesheet" href="css/libs/materialize.min.css">
+    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
+
 <body>
-    <h1>Alura typer</h1>
-    <p class="frase">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis condimentum. Aliquam nonummy auctor massa. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla at risus. Quisque purus magna, auctor et, sagittis ac, posuere eu, lectus. Nam mattis, felis ut adipiscing.</p>
+    <div class="container">
+        <h1 class="center">Alura typer</h1>
+        <p class="frase center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget ligula eu lectus
+            lobortis
+            condimentum. Aliquam nonummy auctor massa. Pellentesque habitant morbi tristique senectus et netus et
+            malesuada fames ac turpis egestas. Nulla at risus. Quisque purus magna, auctor et, sagittis ac, posuere eu,
+            lectus. Nam mattis, felis ut adipiscing.</p>
 
-    <ul class="informacoes">
-        <li>A frase possui <span id="tamanho-frase"></span> palavras</li>
-        <li><span id="tempo-digitacao">3</span> segundos</li>
-    </ul>
+        <ul class="informacoes center">
+            <li>
+                <i class="small material-icons icones">description</i>
+                O texto possui <span id="tamanho-frase"></span> palavras
+            </li>
+            <li>
+                <i class="small material-icons icones">query_builder</i>
+                <span id="tempo-digitacao">12</span> segundos
+            </li>
+        </ul>
 
-    <textarea class="campo-digitacao" rows="8" cols="40"></textarea>
+        <textarea class="campo-digitacao" rows="8" cols="40"></textarea>
 
-    <button id="botao-reiniciar">Reiniciar Jogo</button>
-
-    <ul>
-        <li><span id="contador-caracteres">0</span> caracteres</li>
-        <li><span id="contador-palavras">0</span> palavras</li>
-    </ul>
+        <div class="botoes">
+            <a class="btn-floating btn-large waves-effect waves-light red" id="botao-reiniciar">
+                <i class="material-icons">restore</i>
+            </a>
+        </div>
+        <ul class="center">
+            <li><span id="contador-caracteres">0</span> caracteres</li>
+            <li><span id="contador-palavras">0</span> palavras</li>
+        </ul>
+    </div>
 
     <script src="js/jquery.js"></script>
     <script src="js/main.js"></script>
 
 </body>
+
 </html>
