Criando e Manipulando elementos com jQuery

--- a/principal.html
+++ b/principal.html
@@ -48,20 +48,19 @@
                     <tr>
                         <th>Nome</th>
                         <th>Número de Palavras</th>
+                        <th>Remover</th>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <td>Renato</td>
-                        <td>10</td>
-                    </tr>
-                </tbody>       
+
+                </tbody>
             </table>
         </section>
     </div>
 
     <script src="js/jquery.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/placar.js"></script>
 
 </body>
 
