--- a/principal.html
+++ b/principal.html
@@ -25,7 +25,7 @@
             </li>
             <li>
                 <i class="small material-icons icones">query_builder</i>
-                <span id="tempo-digitacao">12</span> segundos
+                <span id="tempo-digitacao">2</span> segundos
             </li>
         </ul>
 
@@ -34,6 +34,9 @@
         <div class="botoes">
             <a class="btn-floating btn-large waves-effect waves-light red" id="botao-reiniciar">
                 <i class="material-icons">restore</i>
+            </a>
+            <a class="btn-floating btn-large waves-effect waves-light green" id="botao-placar">
+                <i class="material-icons">assignment</i>
             </a>
         </div>
         <ul class="center">
