--- a/principal.html
+++ b/principal.html
@@ -17,6 +17,11 @@
             condimentum. Aliquam nonummy auctor massa. Pellentesque habitant morbi tristique senectus et netus et
             malesuada fames ac turpis egestas. Nulla at risus. Quisque purus magna, auctor et, sagittis ac, posuere eu,
             lectus. Nam mattis, felis ut adipiscing.</p>
+        
+            <div class="center">
+                <img src="img/spinner.gif" alt="Spinner" id="spinner"/>
+                <p id="erro">Ocorreu um erro, por favor tente novamente.</p>
+            </div>
 
         <ul class="informacoes center">
             <li>
