--- a/principal.html
+++ b/principal.html
@@ -46,6 +46,10 @@
             <a class="btn-floating btn-large waves-effect waves-light blue" id="botao-frase">
                 <i class="material-icons">shuffle</i>
             </a>
+            <a class="btn-floating btn-large waves-effect waves-light cyan" id="botao-fraseId">
+                <i class="material-icons">repeat_one</i>
+            </a>
+            <input type="number" id="frase-id" min="0" max="9">
         </div>
         <ul class="center">
             <li><span id="contador-caracteres">0</span> caracteres</li>
