--- a/principal.html
+++ b/principal.html
@@ -50,6 +50,9 @@
                 <i class="material-icons">repeat_one</i>
             </a>
             <input type="number" id="frase-id" min="0" max="9">
+            <a class="btn-floating btn-large waves-effect waves-light yellow" id="botao-sync">
+                <i class="material-icons">swap_vert</i>
+            </a>
         </div>
         <ul class="center">
             <li><span id="contador-caracteres">0</span> caracteres</li>
