Usuários com Selectize

--- a/principal.html
+++ b/principal.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <title>Alura Typer</title>
     <link rel="stylesheet" href="css/libs/materialize.min.css">
+    <link rel="stylesheet" href="css/libs/google-fonts.css">
+    <link rel="stylesheet" href="css/libs/selectize.default.css">
     <link rel="stylesheet" href="css/estilos.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 
 <body>
@@ -50,6 +51,15 @@
                 <i class="material-icons">repeat_one</i>
             </a>
             <input type="number" id="frase-id" min="0" max="9">
+
+            <div class="select-usuarios">
+                <select id="usuarios">
+                    <option value="Renato">Renato</option>
+                    <option value="Ana">Ana</option>
+                    <option value="Pedro">Pedro</option>
+                </select>
+            </div>
+
             <a class="btn-floating btn-large waves-effect waves-light yellow" id="botao-sync">
                 <i class="material-icons">swap_vert</i>
             </a>
@@ -80,6 +90,7 @@
     <script src="js/main.js"></script>
     <script src="js/placar.js"></script>
     <script src="js/frase.js"></script>
+    <script src="js/selectize.js"></script>
 
 </body>
 
