--- a/principal.html
+++ b/principal.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/libs/materialize.min.css">
     <link rel="stylesheet" href="css/libs/google-fonts.css">
     <link rel="stylesheet" href="css/libs/selectize.default.css">
+    <link rel="stylesheet" href="css/libs/tooltipster.bundle.min.css" />
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 
@@ -60,7 +61,7 @@
                 </select>
             </div>
 
-            <a class="btn-floating btn-large waves-effect waves-light yellow" id="botao-sync">
+            <a class="tooltip btn-floating btn-large waves-effect waves-light yellow" id="botao-sync" title="Sincronizado com sucesso!">
                 <i class="material-icons">swap_vert</i>
             </a>
         </div>
@@ -91,6 +92,7 @@
     <script src="js/placar.js"></script>
     <script src="js/frase.js"></script>
     <script src="js/selectize.js"></script>
+    <script src="js/tooltipster.bundle.min.js"></script>
 
 </body>
 
